<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="REQ_IP">http://192.168.0.201:802</string>
    <string name="DOWNLOADIMAGE_P">http://192.168.0.201:802/RemoteImages/</string>
    <string name="DISPLAYDOWNLOADIMAGE_P">http://192.168.0.201:802/Hsimage/</string>
    <string name="REQ_Login_Action">http://tempuri.org/IGetExamDataService/GetCurrentUserInfo</string>
    <string name="Connection_MethodName"></string>
    <string name="Connection_Webservice"></string>
    <string name="app_name">上海海关视频化查验系统</string>
    <string name="title_text">视频查验</string>
    <string name="logout">注销</string>
    <string name="makeSure">确定</string>
    <string name="tv_manifestNumber">报关单号</string>
    <string name="scan">扫描</string>
    <string name="scannerResult">扫描中</string>
    <string name="save">暂存</string>
    <string name="edit_goods_photo_upload">确认上传</string>
    <string name="cancelUpload">取消上传</string>
    <string name="cancel">取消</string>
  	<string name="saveImage">保存图片</string>
    <string name="back">返回</string>
    <string name="search">查询</string>
    <string name="search_result">查询结果</string>
    <string name="to">至</string>
    <string name="serialNum">序号</string>
    <string name="close">关闭</string>
    <string name="inspect">查看</string>
    <string name="spinner_RM2I1_inOrOutTitle">请选择进出口类型</string>
    <string name="spinner_RM2I1_companyTypeTitle">请选择企业类型</string>
    <string name="sp_RM2I4_score">请选择评分分数</string>
    <string name="sp_dayTitle">请选择天数</string>
    <string name="sp_RM3I1_stateTitle">请选择处理情况</string>
    <string name="sp_RM3I2_spinnerOneTitle">请选择一级海关区域</string>
    <string name="sp_RM3I2_spinnerTwoTitle">请选择二级海关区域</string>
    <string name="sp_RM3I2_spinnerThreeTitle">请选三级海关区域</string>
    <string name="sp_RM1I4_spinnerTitle">请选择上传修改人</string>
    <string-array name="sp_stateItemsText">
        <item>10</item> 
        <item>11</item> 
        <item>52</item> 
    </string-array>
    <string-array name="sp_InAndOutItemsText">
        <item>进口</item>
        <item>出口</item>
        <item>全部</item>
    </string-array>
    <string-array name="sp_stateArrOneItemsText">
        <item>未填写查验结果</item>
        <item>已填写查验结果</item>
        <item>已移交单证</item>
    </string-array>
    <string-array name="sp_stateArrTwoItemsText">
        <item>未处理</item>
        <item>已处理</item>
        <item>全部</item>
    </string-array>
    <string-array name="sp_dayItemsText">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <string-array name="sp_customFirstGradeItemsText">
        <item>上海海关</item>
    </string-array>
    <string-array name="sp_customSecondGradeItemsText">
        <item>全部</item>
        <item>浦江海关</item>
        <item>淞江海关</item>
        <item>浦东海关</item>
    </string-array>
    <string-array name="sp_customThirdGradeItemsText">
        <item>全部</item>
        <item>办公室</item>
        <item>现场一处</item>
        <item>现场二处</item>
    </string-array>
    <string name="tv_RM1I4_dialog_text1">选择上传修改人</string>
    <string name="tv_RM1I4_dialog_text2">审核意见</string>
    <string name="btn_save">保存</string>
    <string name="btn_clace">关闭</string>
    <string-array name="sp_scoreItemsText">
        <item>--</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="compareString">3</string>
    <string name="log_user">工号:</string>
    <string name="log_pass">密码:</string>
    <string name="log_txt">登录</string>
    <string name="log_clear">取消</string>
    <string name="et_loginUserNameHint">请输入工号</string>
    <string name="et_loginPWDHint">请输入密码</string>
    <string name="titleMessage">温馨提示：</string>
    <string name="sureExite">确定要退出系统？</string>
    <string name="sureLogout">确定要注销用户？</string>
    <string name="titleChoose">选择：</string>
    <string name="immediately_camera">立即拍照</string>
    <string name="local_upload">本地上传</string>
    <string name="sureDelete">确定要删除此图片吗？</string>
    <string name="pic_zoom">图片缩放</string>
    <string name="nav_title1">查验工作区</string>
    <string name="nav_title2">辅助决策支持</string>
    <string name="nav_title3">工作量统计</string>
    <string name="nav_title6">查验知识库</string>
    <string name="nav_title7">系统设置</string>
    <string name="frameDemo_menu_waitCheck">待查验列表</string>
    <string name="frameDemo_menu_stayImgs">查验单证查询</string>
    <string name="frameDemo_menu_imgsRelated">查验图像上传</string>
    <string name="frameDemo_menu_uploadAuditing">上传信息审核</string>
    <string name="frameDemo_menu_checkBusinessMsg">企业信息查询</string>
    <string name="frameDemo_menu_checkStockMsg">舱单信息查询</string>
    <string name="frameDemo_menu_controlGoodsMsg">商品信息监控</string>
    <string name="frameDemo_menu_allCheckLibrary">查验知识库</string>
    <string name="frameDemo_menu_owerChecks">个人查验单证</string>
    <string name="frameDemo_menu_department">科室查验单证</string>
    <string name="frameDemo_menu_checkOfficialPerformance">查验关员绩效</string>
    <string name="frameDemo_menu_checkDepartmentPerformance">查验部门绩效</string>
    <string name="nav_item_title">添加新业务00</string>
    <string name="msg_num_name">工号：</string>
    <string name="msg_num">22000</string>
    <string name="msg_name_name">姓名：</string>
    <string name="msg_name">玉雄雄</string>
    <string name="msg_custom_name">关区：</string>
    <string name="msg_custom">上海海关技术处</string>
    <string name="msg_depart_name">科室：</string>
    <string name="msg_depart">软件一科</string>
    <string name="tv_RM1I2_requestData">获取数据</string>
    <string name="daiclb">待查验列表</string>
    <string name="zancxx">暂存列表</string>
    <string name="batch_upload">批量上传</string>
    <string name="batch_handle">批量处理</string>
    <string name="cygzDjclb_orderNumber">序号</string>
    <string name="cygzDjclb_customsDeclarationNumber">报关单号</string>
    <string name="cygzDjclb_operate">操作</string>
    <string name="choose_dept">您选择的报关单号为:</string>
    <string name="camera_container_info">集装箱标志</string>
    <string name="camera_container">集装箱箱体</string>
    <string name="camera_goods">货物堆放情况</string>
    <string name="btn_goodsItem">商品项</string>
    <string name="btn_RM1I2_upload">上传</string>
    <string name="BTN_RM1I2_detailTitle">报关单详细信息</string>
    <string name="myNum">我的编号</string>
    <string name="customNum">海关编号</string>
    <string name="preRecordedNum">预录入编号</string>
    <string name="imports_exports_port">进出口岸</string>
    <string name="filingNum">备案号</string>
    <string name="imports_exports_date">进(出)口日期</string>
    <string name="imports_exports_RM1I3_date">进出日期</string>
    <string name="declare_date">申报日期</string>
    <string name="management_unit">经营单位</string>
    <string name="transport_way">运输方式</string>
    <string name="transport_tool_name">运输工具名称</string>
    <string name="escort_num">押运单号</string>
    <string name="receipt_unit">收货单位</string>
    <string name="trade_way">贸易方式</string>
    <string name="exempt_property">征免性质</string>
    <string name="license_num">许可证号</string>
    <string name="destination">起抵地</string>
    <string name="load_unload_port">卸货港</string>
    <string name="shipper_area">货主地区</string>
    <string name="certifiacation_num">批文证号</string>
    <string name="deal_way">成交方式</string>
    <string name="freight">运费</string>
    <string name="premium">保费</string>
    <string name="fees">杂费</string>
    <string name="contract_num">合同协议号</string>
    <string name="number">件数</string>
    <string name="packing_type">包装种类</string>
    <string name="grossWeight">毛重（KG）</string>
    <string name="netWeight">净重（KG）</string>
    <string name="container_num">集装箱号</string>
    <string name="attach_receipt">随附单据</string>
    <string name="supervision_bin_num">监管仓号</string>
    <string name="relate_manifestNum">关联报关单号</string>
    <string name="relate_filing_num">关联备案号</string>
    <string name="manifestType">报关单类型</string>
    <string name="remark">备注</string>
    <string name="dialog_title">报关单详细信息</string>
    <string name="goods_info">商品信息</string>
    <string name="contract_project_num">项号</string>
    <string name="goods_code">商品编码</string>
    <string name="goods_name">商品名称</string>
    <string name="specification_model">规格型号</string>
    <string name="declare_amount">申报数量</string>
    <string name="declare_unit">申报单位</string>
    <string name="legal_amount">法定数量</string>
    <string name="legal_measure_unit">法定计量单位</string>
    <string name="legal_second_amount">法定第二数量</string>
    <string name="originalCountry">原产国</string>
    <string name="unit_price">单价</string>
    <string name="total_price">总价</string>
    <string name="deal_price">成交总价</string>
    <string name="currency_value">币值</string>
    <string name="exempt">征免</string>
    <string name="application">用途</string>
    <string name="btn_RM1I3_detail">表体详情</string>
    <string name="camera_form">商品拍照</string>
    <string name="transport_num">提运单号</string>
    <string name="tv_RM1I3_text1">2013022211212143689</string>
    <string name="tv_RM1I3_text2">2013022211212143689</string>
    <string name="tv_RM1I3_text3">杨浦海关</string>
    <string name="tv_RM1I3_text6">上海宝信公司</string>
    <string name="tv_RM1I3_text7">水路</string>
    <string name="tv_RM1I3_text8">轮船</string>
    <string name="tv_RM1I3_text9">42335243533442534345</string>
    <string name="tv_RM1I3_text10">全球物流（上海分公司）</string>
    <string name="contract_info">合同信息</string>
    <string name="goods_hs">商品HS</string>
    <string name="goods_RM1I3_name">品名</string>
    <string name="reality_goods_hs">实际商品HS</string>
    <string name="reality_goods_name">实际品名</string>
    <string name="goods_specification_model">商品规格、型号</string>
    <string name="operate">操作</string>
    <string name="imports_exports">进出口</string>
    <string name="declare_batch_num">申报批数</string>
    <string name="check_batch_num">查验批数</string>
    <string name="check_rate">查验率（%）</string>
    <string name="seize_batch_num">查获批数</string>
    <string name="seize_rate">查获率（%）</string>
    <string name="month">月份</string>
    <string name="seizeItem_goods_name">查获项商品名</string>
    <string name="seizeItem_declare_taxNum">查获项申报税号</string>
    <string name="H2000_handle_result">H2000处理结果</string>
    <string name="seize_view_hint">查获意见提示</string>
    <string name="excellent_degree">优秀程度</string>
    <string name="pic_interaction_info">图像交互信息</string>
    <string name="first_goods_name">第一品名</string>
    <string name="check_time">查验时间</string>
    <string name="check_way">查验方式</string>
    <string name="check_custom_officer">查验关员</string>
    <string name="check_handle_view">查验处理意见</string>
    <string name="check_handle_result">查验处理结果</string>
    <string name="custom_officer_name">关员姓名</string>
    <string name="check_batch">查验批次</string>
    <string name="seize_batch">查获批次</string>
    <string name="tv_send">移送批数</string>
    <string name="tv_sendRate">移送率</string>
    <string name="tv_catchCert">查获（涉证）数</string>
    <string name="tv_catchTax">查获（涉税）数</string>
    <string name="tv_catchDellete">查获（删改）数</string>
    <string name="tv_catchOther">查获（其它）数</string>
    <string name="tv_aboutPower">涉侵权数</string>
    <string name="tv_aboutArmy">涉军品数</string>
    <string name="tv_catchCase">缉私立案数</string>
</resources>