<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="right"
    android:orientation="vertical" >
    
    <LinearLayout 
         android:layout_width="fill_parent"
    	 android:layout_height="0dp"
    	 android:layout_weight="1"
         android:gravity="right"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp" >
        <TextView
            style="@style/WAndH_wrap_content"
            android:text="@string/msg_num_name" />

        <TextView
            android:id="@+id/tv_LobNumber"
           	style="@style/WAndH_wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/msg_num" />

        <TextView
            style="@style/WAndH_wrap_content"
            android:text="@string/msg_name_name" />

        <TextView
            android:id="@+id/tv_UserName"
           	style="@style/WAndH_wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/msg_name" />

        <TextView
            style="@style/WAndH_wrap_content"
            android:text="@string/msg_custom_name" />

        <TextView
            android:id="@+id/tv_CustomsName"
            style="@style/WAndH_wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/msg_custom" />

        <TextView
            style="@style/WAndH_wrap_content"
            android:text="@string/msg_depart_name" />

        <TextView
            android:id="@+id/tv_SectionName"
            style="@style/WAndH_wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/msg_depart" />

		<Button 
		    android:id="@+id/btn_logout"
            style="@style/WAndH_wrap_content"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/title_cancel" />
	
    </LinearLayout>
    
	<ImageView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:src="@drawable/title_divide_bg"
	    android:layout_gravity="right"
	  	android:paddingRight="5dp"
	  	android:paddingLeft="300dp"
	    android:layout_marginBottom="10dp"
	    android:contentDescription="@null" />
		
</LinearLayout>