<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textview1"
                android:layout_width="400dp"
                style="@style/LV_ITEMS_H"
                android:text="@string/management_unit"/>

            <TextView
                android:id="@+id/textview2"
                android:layout_width="400dp"
                style="@style/LV_ITEMS_H"
                android:text="@string/declare_unit"/>

            <TextView
                android:id="@+id/textview3"
                android:layout_width="400dp"
                style="@style/LV_ITEMS_H"
                android:text="@string/first_goods_name" />

            <TextView
                android:id="@+id/textview4"
                android:layout_width="300dp"
                style="@style/LV_ITEMS_H"
                android:text="@string/check_time"/>
            
            <TextView
                android:id="@+id/textview5"
                android:layout_width="300dp"
                style="@style/LV_ITEMS_H"
                android:text="@string/check_way" />
            
            <TextView
                android:id="@+id/textview6"
                android:layout_width="300dp"
                style="@style/LV_ITEMS_H"
                android:text="@string/check_custom_officer" />
            
            <TextView
                android:id="@+id/textview7"
                android:layout_width="300dp"
                style="@style/LV_ITEMS_H"
                android:text="@string/check_handle_view" />
            
            <TextView
                android:id="@+id/textview8"
                android:layout_width="300dp"
                style="@style/LV_ITEMS_H"
                android:text="@string/check_handle_result"/>
            
            <TextView
                android:id="@+id/textview9"
                android:layout_width="300dp"
                style="@style/LV_ITEMS_H"
                android:text="@string/imports_exports" />
    
        </LinearLayout>
        
        <ImageView
		    android:contentDescription="@null"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divide" />
        
        <com.bai.demo.utils.MyListView
            android:id="@+id/lv_RM3I2_right_layout_listView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </com.bai.demo.utils.MyListView>
        
        <View style="@style/LV_HorazitLine" />
    </LinearLayout>

</HorizontalScrollView>